add step 1 choose car logic

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <nav class="menu" id="nav">
-	<span class="nav-item active">
+	<span class="nav-item" routerLink="/choose-car" routerLinkActive="active" id="step1">
 		<span class="icon">
 <i class="fa-solid fa-car"></i>
 
 		</span>
 		<a href="#">Step 1</a>
 	</span>
-  <span class="nav-item">
+  <span class="nav-item"  id="step2">
 		<span class="icon">
       <i class="fa-solid fa-gears"></i>
 		</span>
 		<a href="#">Step 2</a>
 	</span>
-  <span class="nav-item">
+  <span class="nav-item" id="step3">
 		<span class="icon">
       <i class="fa-solid fa-list"></i>
 		</span>
