add step 2 car config

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,16 +1,9 @@
 <nav class="menu" id="nav">
 	<span class="nav-item" routerLink="/choose-car" routerLinkActive="active" id="step1">
-		<span class="icon">
-<i class="fa-solid fa-car"></i>
-
-		</span>
-		<a href="#">Step 1</a>
+		<span class="icon"><i class="fa-solid fa-car"></i></span>Step 1
 	</span>
-  <span class="nav-item"  id="step2">
-		<span class="icon">
-      <i class="fa-solid fa-gears"></i>
-		</span>
-		<a href="#">Step 2</a>
+  <span class="nav-item" routerLink="/car-config" routerLinkActive="active" id="step2">
+		<span class="icon"><i class="fa-solid fa-gears"></i></span>Step 2
 	</span>
   <span class="nav-item" id="step3">
 		<span class="icon">
