--- a/src/app/components/choose-car/choose-car.component.html
+++ b/src/app/components/choose-car/choose-car.component.html
@@ -1,35 +1,32 @@
 <h1>Step 1: Choose your model and color</h1>
 
-<form [formGroup]="chooseCarForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="chooseCarForm">
   <div class="group">
     <select class="select" (change)="changeCarModel($event)" formControlName="carModel" id="modelSelect"
-            *ngIf="carModelsDesc">
+            *ngIf="carModelList">
       <option class="option" value="">Choose your car model</option>
-      <option class="option" *ngFor="let model of carModelsDesc" [value]="model">{{model}}</option>
+      <option class="option" *ngFor="let model of carModelList" [value]="model.code">{{model.description}}</option>
     </select>
     <div *ngIf="chooseCarFormControls.carModel.invalid && (chooseCarFormControls.carModel.dirty
     || chooseCarFormControls.carModel.touched)" class="alert alert-danger form-danger" role="alert">
-      <div *ngIf="chooseCarFormControls.carModel.errors?.required">
+      <div *ngIf="chooseCarFormControls.carModel.errors?.['required']">
         Please choose a car model
       </div>
     </div>
-    <select class="custom-select" (change)="changeCarColor($event)" formControlName="carColor"  id="colorSelect"
+    <select class="custom-select" (change)="changeCarColor($event)" formControlName="carColor" id="colorSelect"
             *ngIf="selectedCarModel && selectedCarModel.colors">
       <option value="">Choose your color</option>
-      <option *ngFor="let color of selectedCarModel.colors" [value]="color.description">{{color.description}}</option>
+      <option *ngFor="let color of selectedCarModel.colors" [value]="color.code">{{color.description}}</option>
     </select>
     <div *ngIf="chooseCarFormControls.carColor.invalid && (chooseCarFormControls.carColor.dirty
     || chooseCarFormControls.carColor.touched)" class="alert alert-danger form-danger" role="alert">
-      <div *ngIf="chooseCarFormControls.carColor.errors?.required">
+      <div *ngIf="chooseCarFormControls.carColor.errors?.['required']">
         Please choose a car color
       </div>
     </div>
   </div>
 
-  <ng-container *ngIf="imageUrl">
-    <img [src]="imageUrl" class="car-image">
-
-  </ng-container>
+  <app-car-image [imageUrl]="imageUrl"></app-car-image>
 
 </form>
 
