--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,7 @@
   <span class="nav-item" routerLink="/car-config" routerLinkActive="active" id="step2">
 		<span class="icon"><i class="fa-solid fa-gears"></i></span>Step 2
 	</span>
-  <span class="nav-item" id="step3">
-		<span class="icon">
-      <i class="fa-solid fa-list"></i>
-		</span>
-		<a href="#">Step 3</a>
+  <span class="nav-item" routerLink="/summary" routerLinkActive="active" id="step3">
+		<span class="icon"><i class="fa-solid fa-list"></i></span>Step 3
 	</span>
 </nav>
