--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,10 @@
 	<span class="nav-item" routerLink="/choose-car" routerLinkActive="active" id="step1">
 		<span class="icon"><i class="fa-solid fa-car"></i></span>Step 1
 	</span>
-  <span class="nav-item" routerLink="/car-config" routerLinkActive="active" id="step2">
+  <span class="nav-item" [class.disabled]="!stateService.isStep1Valid()" routerLink="/car-config" routerLinkActive="active" id="step2">
 		<span class="icon"><i class="fa-solid fa-gears"></i></span>Step 2
 	</span>
-  <span class="nav-item" routerLink="/summary" routerLinkActive="active" id="step3">
+  <span class="nav-item" [class.disabled]="!stateService.isStep2Valid()" routerLink="/summary" routerLinkActive="active" id="step3">
 		<span class="icon"><i class="fa-solid fa-list"></i></span>Step 3
 	</span>
 </nav>
