add error style & update image component

--- a/src/app/components/car-image/car-image.component.html
+++ b/src/app/components/car-image/car-image.component.html
@@ -1,4 +1,3 @@
-<ng-container *ngIf="imageUrl">
-  <img [src]="imageUrl" class="car-image">
-
+<ng-container *ngIf="stateService.imageUrl">
+  <img [src]="stateService.imageUrl" class="car-image">
 </ng-container>
