--- a/src/app/components/car-config/car-config.component.html
+++ b/src/app/components/car-config/car-config.component.html
@@ -1,23 +1,22 @@
 <h1>Step 2: Select your config and options</h1>
 
 <form [formGroup]="carConfigForm">
-  <div class="group">
+  <div>
     <select class="select" (change)="changeCarConfig($event)" formControlName="config" id="configSelect"
             *ngIf="carConfigList?.configs">
       <option class="option" value=0>Choose your config</option>
       <option class="option" *ngFor="let config of carConfigList?.configs"
               [value]="config.id">{{config.description}}</option>
     </select>
-    <div *ngIf="carConfigFormControls.config.invalid && (carConfigFormControls.config.dirty
-    || carConfigFormControls.config.touched)" class="alert alert-danger form-danger" role="alert">
-      <div *ngIf="carConfigFormControls.config.errors?.['required']">
+    <div *ngIf="carConfigFormControls.config.dirty || carConfigFormControls.config.touched">
+      <div *ngIf="carConfigFormControls.config.value == 0" class="error">
         Please choose a car config
       </div>
     </div>
   </div>
-  <div *ngIf="selectedCarConfig">
-    Range: {{selectedCarConfig.range}} miles - Max speed: {{selectedCarConfig.speed}} - Cost
-    {{selectedCarConfig.price | currency:'USD':'symbol':'1.2-2'}}
+  <div *ngIf="stateService.selectedCarConfig">
+    Range: {{stateService.selectedCarConfig.range}} miles - Max speed: {{stateService.selectedCarConfig.speed}} - Cost
+    {{stateService.selectedCarConfig.price | currency:'USD':'symbol':'1.2-2'}}
   </div>
   <div *ngIf="carConfigList?.towHitch">
     <label>Tow hitch?</label>
@@ -29,4 +28,4 @@
   </div>
 
 </form>
-<app-car-image [imageUrl]="imageUrl"></app-car-image>
+<app-car-image></app-car-image>
