--- a/src/app/components/choose-car/choose-car.component.scss
+++ b/src/app/components/choose-car/choose-car.component.scss
@@ -1,7 +1,3 @@
-/*
-inspired by https://codepen.io/cssinate/pen/KVdYjz
- */
-
 .group {
   display: flex;
 }
@@ -78,4 +74,10 @@ input:checked + label:before {
   width: 40px;
   content: '';
   background:#666;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+  padding-left: 20px;
 }
