--- a/src/app/components/car-image/car-image.component.html
+++ b/src/app/components/car-image/car-image.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="stateService.imageUrl">
-  <img [src]="stateService.imageUrl" class="car-image">
+  <img [src]="stateService.imageUrl" class="car-image" [alt]="stateService.selectedCarModel?.description">
 </ng-container>
